# PeTu

./: .gitignore  README.md  pyproject.toml
.github/.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: tests.yml
docs/source/: conf.py  constants.rst  index.rst  inferer.rst
package_name/: constants.py  data_handler.py  inferer.py  model_handler.py  weights.py
petu/: constants.py  data_handler.py  inferer.py  model_handler.py  weights.py
petu/utils/: citation_reminder.py
tests/: test_data_handler.py  test_inferer.py  test_model_handler.py  test_weights.py
