[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "package_name"
version = "0.0.0.dev"
description = ""
authors = [
    "Marcel Rosier <marcel.rosier@tum.de>",
    "Florian Kofler <florian.kofler@tum.de>",
]

repository = "https://www.TODO.com"
homepage = "https://www.TODO.com"
documentation = "https://www.TODO.com"
readme = "README.md"


# Add the exclude field directly under [tool.poetry]
exclude = ["examples", "benchmark"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.2"
nibabel = "^5.3.2"
loguru = "^0.7.3"
torch = "^2.6.0"


[tool.poetry.dev-dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
flake8 = ">=4.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = ">=7.0.0"
sphinx-copybutton = ">=0.5.2"
furo = ">=2024.8.6"
myst-parser = ">=2.0.0"
